Attempt to fix broken logo on front page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
                     <span><img class="img-responsive fade-in three" src="assets/circle3.svg" alt="circle of programming language icons"></span>
                 </div>
                 <div class="img-container">
-                    <img class="img-responsive" src="assets/main-logo.svg" alt="jupyter logo">
+                    <img class="img-responsive" id="main-logo" src="assets/main-logo.svg" alt="jupyter logo">
                 </div>
                 <img class="img-responsive" src="assets/white-background.svg" alt="white background">
             </div>
